--- a/alertmanagement.properties
+++ b/alertmanagement.properties
@@ -1,1 +1,4 @@
 alertmanagement.title=Alert Management service 
+spring.data.mongodb.port=23013
+spring.data.mongodb.database=demo
+server.port=8083
