Update alertmanagement.properties make wrong changes

--- a/alertmanagement.properties
+++ b/alertmanagement.properties
@@ -1,4 +1,4 @@
 alertmanagement.title=Alert Management service 
 spring.data.mongodb.port=23017
-spring.data.mongodb.database=demo
+spring.data.mongodb.database=demos
 server.port=8081
