--- a/alertmanagement.properties
+++ b/alertmanagement.properties
@@ -1,4 +1,4 @@
 alertmanagement.title=Alert Management service this is 
 spring.data.mongodb.port=23017
-spring.data.mongodb.database=demo
+spring.data.mongodb.database=demo1
 server.port=8081
