--- a/alertmanagement.properties
+++ b/alertmanagement.properties
@@ -1,4 +1,4 @@
-alertmanagement.title=Alert Management service it is 
+alertmanagement.title=Hi I am Alert Management service
 spring.data.mongodb.port=23017
 spring.data.mongodb.database=demo
 server.port=8081
