--- a/alertmanagement.properties
+++ b/alertmanagement.properties
@@ -1,4 +1,4 @@
 alertmanagement.title=Hi I am Alert Management service
-spring.data.mongodb.port=23017
-spring.data.mongodb.database=demo
+#spring.data.mongodb.port=23017
+#pring.data.mongodb.database=demo
 server.port=8081
