--- a/alertmanagement.properties
+++ b/alertmanagement.properties
@@ -1,4 +1,27 @@
 alertmanagement.title=Hi I am Alert Management service
-#spring.data.mongodb.port=23017
-#pring.data.mongodb.database=demo
+spring.application.name=alertmanagement
+logging.level.root=INFO
 server.port=8081
+
+#mongoDB connection
+spring.data.mongodb.uri=mongodb://192.168.1.10/
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=alertManagementDB
+
+# Metadata for Swagger UI
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.info.title=Alert Management API
+springdoc.info.description=API endpoints for managing alerts
+springdoc.info.version=1.0.0
+
+# Swagger UI Customization
+springdoc.swagger-ui.operations-sorter=alpha
+springdoc.swagger-ui.tags-sorter=alpha
+springdoc.swagger-ui.doc-expansion=none
+
+#Kafka configs
+spring.kafka.template.default-topic=get-alerts
+spring.kafka.consumer.group-id=alert-mgmt-group
