--- a/alertmanagement.properties
+++ b/alertmanagement.properties
@@ -23,5 +23,7 @@ springdoc.swagger-ui.tags-sorter=alpha
 springdoc.swagger-ui.doc-expansion=none
 
 #Kafka configs
+spring.kafka.producer.bootstrap-servers=192.168.1.10:9092
 spring.kafka.template.default-topic=get-alerts
 spring.kafka.consumer.group-id=alert-mgmt-group
+
