--- a/alertmanagement.properties
+++ b/alertmanagement.properties
@@ -24,6 +24,6 @@ springdoc.swagger-ui.doc-expansion=none
 
 #Kafka configs
 spring.kafka.producer.bootstrap-servers=192.168.1.10:9092
-spring.kafka.template.default-topic=get-alerts
-spring.kafka.consumer.group-id=alert-mgmt-group
+spring.kafka.template.default-topic=org.outdu.alertmanagement.alerts
+spring.kafka.consumer.group-id=alert-management-group
 
