--- a/alertmanagement.properties
+++ b/alertmanagement.properties
@@ -6,7 +6,7 @@ server.port=8081
 #mongoDB connection
 spring.data.mongodb.uri=mongodb://192.168.1.10/
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=alertManagementDB
+spring.data.mongodb.database=demo
 
 # Metadata for Swagger UI
 springdoc.api-docs.path=/v3/api-docs
